--- a/assets/css/settings.css
+++ b/assets/css/settings.css
@@ -232,8 +232,6 @@
     
   }
 
-  
-
   html, body, div, span, applet, object, iframe, a,
    navbar-right abbr, acronym, address, big, navbar-right cite, 
    code, del, dfn, em, font, img, ins, kbd, samp, f small, strike, 
@@ -244,6 +242,17 @@
     border: 0;
     outline: 0;
 }
+.col, .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col-auto, .col-lg, 
+.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, 
+.col-lg-12, .col-lg-auto, .col-md, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8,
+.col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md-auto, .col-sm, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, 
+.col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-auto, .col-xl, 
+.col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8,
+.col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-auto {
+  padding-right: 7.5px;
+  padding-left: 7.5px;
+}
+
 
 h1,h2,h3,h3,h4,h6{
     color: #252c53;
@@ -283,6 +292,13 @@ h1,h2,h3,h3,h4,h6{
   }
   span{
     color: #252c53;
+    
+  }
+  span, p{
+    font-weight: 500 !important;
+  }
+  .img-fluid, .img-thumbnail{
+    font-weight: 500;
   }
   .float-l{
     float: left !important;
@@ -1970,6 +1986,9 @@ hr{
   }  
   .mt-xs-15{
     margin-top: 0.938rem !important;
+  }
+  .ml-xs-0{
+      margin-left: 0 !important; 
   }
    .mt-50-0{
      margin-top: 3.125rem !important;
