--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1249,7 +1249,8 @@ overflow: hidden;
 .my-demand-post-status span.post-status{
   border-radius: 50px;
   padding: 3px 10px 2px 10px;
-  font-size: 14px
+  font-size: 14px;
+  font-weight: 500;
 }
 .my-demand-post-bid span{
    border-radius: 50px;
